--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "kartik-v/yii2-widgets": "dev-master",
         "kartik-v/yii2-grid": "dev-master",
         "kartik-v/yii2-export": "dev-master",
-        "kartik-v/yii2-bootstrap4-dropdown": "dev-master"
+        "kartik-v/yii2-bootstrap4-dropdown": "dev-master",
+        "denchotsanov/yii2-user": "dev-master"
 
     },
     "require-dev": {
