--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
         "php": ">=5.4.0",
         "yiisoft/yii2": "~2.0.14",
         "yiisoft/yii2-bootstrap": "~2.0.0",
-        "yiisoft/yii2-bootstrap4": "@dev",
+        "yiisoft/yii2-bootstrap4": "*",
         "yiisoft/yii2-swiftmailer": "~2.1.0",
         "kartik-v/yii2-widgets": "dev-master",
         "kartik-v/yii2-grid": "dev-master",
